# McpServerHub

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  McpServerHub开发文档.md  McpServerHub项目文档.md  PROJECT_SNAPSHOT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  项目全面分析报告.md
.github/workflows/: ci.yml
.hooks/: pre-commit
alembic/: env.py
deploy/: install-skillhub.md  install.md  install.sh  logging.conf  mcp-hub.service
src/mcp_hub/: __init__.py  config.py  exceptions.py  logging_config.py  main.py
src/mcp_hub/api/: app.py  routes_auth.py  routes_builder.py  routes_community.py  routes_config.py  routes_export.py  routes_health.py  routes_manage.py  routes_market.py  routes_monitor.py  routes_publish.py  routes_realtime.py  routes_search.py  routes_security.py  routes_token.py  schemas.py
src/mcp_hub/cli/: app.py  auth.py  community.py  config.py  create.py  daemon.py  event.py  hub_install.py  init_cmd.py  install.py  logs.py  manage.py  monitor.py  prompt_install.py  publish.py  quickstart.py  registry_sync.py  search.py  security.py  token.py  trending.py  update.py
src/mcp_hub/core/: __init__.py  auth.py  config_manager.py  dependency_analyzer.py  event_bus.py  health_check.py  installer.py  local_discovery.py  mcp_gateway.py  monitor.py  process_manager.py  registry.py  security_scanner.py  server_builder.py  token_analyzer.py  version_manager.py
tests/: conftest.py  test_auth.py  test_core.py  test_init.py
tests/api/: test_publish.py
tests/cli/: test_event.py  test_install.py  test_manage.py  test_publish.py
tests/fixtures/: seed_data.json  server_meta.json
tests/unit/: test_api_schemas.py  test_exceptions.py  test_health_check.py  test_models.py  test_monitor.py  test_process_manager.py  test_registry.py  test_repositories.py  test_security_scanner.py  test_server_builder.py  test_token_analyzer.py
(+36 files in other folders)
